feat: 로그인 페이지 구현 로그인 페이지를 구현하였습니다. 로그인 페이지의 스타일을 통일성있게 구현하였습니다.
Resolves: #9

--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -17,5 +17,24 @@
   </head>
   <body>
     <header></header>
+    <main role="main">
+      <div id="loginContainer">
+        <p>welcome<br />[book-cord]</p>
+        <div id="socialLoginContainer">
+          <img src="./images/apple.png" alt="appleLogin" />
+          <img src="./images/facebook.png" alt="facebookLogin" />
+          <img src="./images/google.png" alt="googleLogin" />
+          <img src="./images/kakao-talk.png" alt="kakaotalkLogin" />
+        </div>
+        <div><input type="text" placeholder="아이디를 입력해 주세요" /></div>
+        <div>
+          <input type="password" placeholder="비밀번호를 입력해 주세요" />
+        </div>
+        <div class="buttonContainer">
+          <button class="signInButton button">Sign In</button>
+          <button class="logInButton button">Log In</button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
