feat: div -> ul 태그 수정
footer의 깃헙 연결링크의 기존 div태그를 ul과 li태그로 변경하였습니다.

--- a/src/views/common/footer/footer.html
+++ b/src/views/common/footer/footer.html
@@ -19,24 +19,28 @@
                 ⓒ 2022 UnIMooN Corp. all rights reserved.
             </p>
         </div>
-        <div class="footerLinks">
-            <a href="https://github.com/Jinnie-kim" target="_blank">
-                <button class="footerButton gitHjin" href="">
-                    <i class="fa-brands fa-github"></i>
-                    <strong class="footerButtonName">
-                        희진
-                    </strong>
-                </button>
-            </a>
-            <a href="https://github.com/sojeongsojeong-park" target="_blank">
-                <button class="footerButton gitSjeong">
-                    <i class="fa-brands fa-github"></i>
-                    <strong class="footerButtonName">
-                        소정
-                    </strong>
-                </button>
-            </a>
-        </div>
+        <ul class="footerLinks">
+            <li>
+                <a href="https://github.com/Jinnie-kim" target="_blank">
+                    <button class="footerButton gitHjin" href="">
+                        <i class="fa-brands fa-github"></i>
+                        <strong class="footerButtonName">
+                            희진
+                        </strong>
+                    </button>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/sojeongsojeong-park" target="_blank">
+                    <button class="footerButton gitSjeong">
+                        <i class="fa-brands fa-github"></i>
+                        <strong class="footerButtonName">
+                            소정
+                        </strong>
+                    </button>
+                </a>
+            </li>
+        </ul>
     </footer>
 </body>
 </html>
