feat: footer의 CSS 파일 수정
div -> ul>li 태그 변경으로 인해 CSS 파일을 추가 수정하였습니다.

Resolves: #10

--- a/src/views/common/footer/footer.css
+++ b/src/views/common/footer/footer.css
@@ -16,9 +16,14 @@ footer {
 }
 
 .footerLinks {
+    display: flex;
     position: absolute;
     top: calc(50% - 12px);
     right: 50px;
+}
+
+.footerLinks li+li {
+    margin-left: 10px;
 }
 
 .footerLogoImage {
@@ -38,9 +43,9 @@ footer {
     background-color: #314232;
 }
 
-.footerButton:last-child {
+/* .footerButton:last-child {
     margin-left: 10px;
-}
+} */
 
 .footerButton i {
     display: inline-block;
