--- a/src/views/signIn/signIn.html
+++ b/src/views/signIn/signIn.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../common/reset.css" />
     <link rel="stylesheet" href="../common/header/header.css" />
-    <link rel="stylesheet" href="./login.css" />
+    <link rel="stylesheet" href="./signIn.css" />
     <script
       src="https://kit.fontawesome.com/d0a847a6bb.js"
       crossorigin="anonymous"
     ></script>
     <script defer src="../common/header/header.js"></script>
-    <script defer src="./login.js"></script>
+    <script defer src="./signIn.js"></script>
     <title>[book-cord]</title>
   </head>
   <body>
@@ -20,21 +20,12 @@
     <main role="main">
       <div id="loginContainer">
         <p>welcome<br />[book-cord]</p>
-        <div id="socialLoginContainer">
-          <img src="./images/apple.png" alt="appleLogin" />
-          <img src="./images/facebook.png" alt="facebookLogin" />
-          <img src="./images/google.png" alt="googleLogin" />
-          <img src="./images/kakao-talk.png" alt="kakaotalkLogin" />
-        </div>
         <div><input type="text" placeholder="아이디를 입력해 주세요" /></div>
         <div>
           <input type="password" placeholder="비밀번호를 입력해 주세요" />
         </div>
         <div class="buttonContainer">
-          <a href="../signIn/signIn.html"
-            ><button class="signInButton button">Sign In</button></a
-          >
-          <a><button class="logInButton button">Log In</button></a>
+          <button class="signInButton button">Sign In</button>
         </div>
       </div>
     </main>
