--- a/src/views/common/header/header.css
+++ b/src/views/common/header/header.css
@@ -1,5 +1,8 @@
 /* common */
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+* {
+  font-family: "Spoqa Han Sans Neo", "sans-serif";
+}
 a {
   text-decoration: none;
 }
