--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -26,7 +26,7 @@
           <img src="./images/google.png" alt="googleLogin" />
           <img src="./images/kakao-talk.png" alt="kakaotalkLogin" />
         </div>
-        <div><input type="text" placeholder="아이디를 입력해 주세요" /></div>
+        <div><input type="text" placeholder="이메일을 입력해 주세요" /></div>
         <div>
           <input type="password" placeholder="비밀번호를 입력해 주세요" />
         </div>
