--- a/src/views/common/reset.css
+++ b/src/views/common/reset.css
@@ -1,10 +1,10 @@
 /* Reset CSS */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
 }
 
 a {
@@ -21,7 +21,7 @@ button {
 button,
 textarea,
 input {
-    font-family: inherit;
+    /* font-family: inherit; */
     font-size: 16px;
 }
 
@@ -130,7 +130,7 @@ video {
     padding: 0;
     border: 0;
     font-size: 100%;
-    font: inherit;
+    /* font: inherit; */
     vertical-align: baseline;
 }
 
@@ -176,7 +176,7 @@ button {
     width: 100%;
     border: none;
     padding: 0;
-    font: inherit;
+    /* font: inherit; */
 }
 
 .ir_text{
