--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../common/reset.css" />
     <link rel="stylesheet" href="../common/header/header.css" />
+    <link rel="stylesheet" href="../common/footer/footer.css" />
     <link rel="stylesheet" href="./login.css" />
     <script
       src="https://kit.fontawesome.com/d0a847a6bb.js"
@@ -13,6 +14,7 @@
     ></script>
     <script defer src="../common/header/header.js"></script>
     <script defer src="./login.js"></script>
+    <script defer src="../common/footer/footer.js"></script>
     <title>[book-cord]</title>
   </head>
   <body>
@@ -38,5 +40,6 @@
         </div>
       </div>
     </main>
+    <footer></footer>
   </body>
 </html>
