--- a/src/views/signIn/signIn.html
+++ b/src/views/signIn/signIn.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../common/reset.css" />
     <link rel="stylesheet" href="../common/header/header.css" />
+    <link rel="stylesheet" href="../common/footer/footer.css" />
     <link rel="stylesheet" href="./signIn.css" />
     <script
       src="https://kit.fontawesome.com/d0a847a6bb.js"
       crossorigin="anonymous"
     ></script>
     <script defer src="../common/header/header.js"></script>
+    <script defer src="../common/footer/footer.js"></script>
     <script defer src="./signIn.js"></script>
     <title>[book-cord]</title>
   </head>
@@ -44,5 +46,6 @@
         </form>
       </div>
     </main>
+    <footer></footer>
   </body>
 </html>
