--- a/src/views/record/record.css
+++ b/src/views/record/record.css
@@ -4,8 +4,9 @@ main {
 }
 /* section */
 section {
+  width: 900px;
   position: absolute;
-  left: calc(50% - 500px);
+  left: calc(50% - 450px);
   background-color: #ffffff;
   box-shadow: 4px 4px 55px rgba(162, 132, 107, 0.25);
   border-radius: 24px;
@@ -51,5 +52,5 @@ input {
   background-color: #314232;
   position: relative;
   top: 80px;
-  left: -470px;
+  left: 400px;
 }
