feat: 랜딩페이지 클래스 코드컨벤션 수정
코드 컨벤션에 어긋난 클래스 이름을 수정했습니다.

Resolves: #23

--- a/src/views/landing/landing.html
+++ b/src/views/landing/landing.html
@@ -18,37 +18,37 @@
 </head>
 <body>
     <header></header>
-    <main class="main-page">
+    <main class="mainPage">
         <div id="tabMenu"></div>
 
         <div class="carousel">
 
-            <button class="carousel__button carousel__button--left is-hidden">
+            <button class="carouselButton carouselButtonLeft isHidden">
                 <i class="fa-solid fa-chevron-left"></i>
             </button>
 
-            <div class="carousel__track-container">
-                <ul class="carousel__track">
-                    <li class="carousel__slide current-slide">
-                        <img class="carousel__image" src="./images/bookImage1.png" alt="이미지 캐러셀 첫 번째 이미지">
+            <div class="carouselTrackContainer">
+                <ul class="carouselTrack">
+                    <li class="carouselSlide currentSlide">
+                        <img class="carouselImage" src="./images/bookImage1.png" alt="이미지 캐러셀 첫 번째 이미지">
                     </li>
-                    <li class="carousel__slide">
-                        <img class="carousel__image" src="./images/bookImage2.jpeg" alt="이미지 캐러셀 두 번째 이미지">
+                    <li class="carouselSlide">
+                        <img class="carouselImage" src="./images/bookImage2.jpeg" alt="이미지 캐러셀 두 번째 이미지">
                     </li>
-                    <li class="carousel__slide">
-                        <img class="carousel__image" src="./images/bookImage3.jpeg" alt="이미지 캐러셀 세 번째 이미지">
+                    <li class="carouselSlide">
+                        <img class="carouselImage" src="./images/bookImage3.jpeg" alt="이미지 캐러셀 세 번째 이미지">
                     </li>
                 </ul>
             </div>
 
-            <button class="carousel__button carousel__button--right">
+            <button class="carouselButton carouselButtonRight">
                 <i class="fa-solid fa-chevron-right"></i>
             </button>
 
-            <div class="carousel__nav">
-                <button class="carousel__indicator current-slide"></button>
-                <button class="carousel__indicator"></button>
-                <button class="carousel__indicator"></button>
+            <div class="carouselNav">
+                <button class="carouselIndicator currentSlide"></button>
+                <button class="carouselIndicator"></button>
+                <button class="carouselIndicator"></button>
             </div>
         </div>
     </main>
