--- a/src/views/landing/landing.css
+++ b/src/views/landing/landing.css
@@ -1,6 +1,6 @@
 
 /* main */
-.main-page {
+.mainPage {
     display: flex;
     height: 100vh;
     flex-direction: column;
@@ -16,57 +16,57 @@
     margin: 0 auto;
 }
 
-.carousel__image {
+.carouselImage {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.carousel__track-container {
+.carouselTrackContainer {
     height: 100%;
     position: relative;
     overflow: hidden;
 }
 
-.carousel__track {
+.carouselTrack {
     position: relative;
     height: 100%;
     transition: transform 250ms ease-in;
 }
 
-.carousel__slide {
+.carouselSlide {
     position: absolute;
     top: 0;
     bottom: 0;
     width: 100%;
 }
 
-.carousel__button {
+.carouselButton {
     width: 22px;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
 }
 
-.carousel__button i {
+.carouselButton i {
     font-size: 20px;
 }
 
-.carousel__button--left { 
+.carouselButtonLeft { 
     left: -50px;
 }
 
-.carousel__button--right {
+.carouselButtonRight {
     right: -50px;
 }
 
-.carousel__nav {
+.carouselNav {
     display: flex;
     justify-content: center;
     margin-top: 10px;
 }
 
-.carousel__indicator {
+.carouselIndicator {
     border-radius: 50%;
     width: 15px;
     height: 15px;
@@ -74,10 +74,10 @@
     margin: 0 12px;
 }
 
-.carousel__indicator.current-slide {
+.carouselIndicator.currentSlide {
     background-color: #5B6D5B;
 }
 
-.is-hidden {
+.isHidden {
     display: none;
 }
