feat:myBook페이지 구현 myBook 페이지를 구현하였습니다. myInfo를 눌러 닉네임과 문구를 수정하고 로컬스토리지에 저장합니다. 저장된 정보로 닉네임과 문구를 구성합니다.
Resolves: #6, #7, #25

--- a/src/views/myBook/myBook.html
+++ b/src/views/myBook/myBook.html
@@ -22,7 +22,9 @@
     <main role="main">
       <section>
         <h2 class="ir_text">myProfile</h2>
-        <div class="imageContainer"></div>
+        <div class="imageContainer">
+          <i class="fa-solid fa-user"></i>
+        </div>
         <div id="nickName"></div>
         <div class="textContainer">
           <i class="fa-solid fa-quote-left"></i>
@@ -39,6 +41,32 @@
             </li>
           </ul>
         </article>
+      </section>
+      <section id="myInfosection">
+        <div class="myInfoContainer">
+          <h2>my Info</h2>
+          <form>
+            <div>
+              <label for="nickName">닉네임</label>
+              <input
+                type="text"
+                placeholder="닉네임을 입력해 주세요"
+                id="nickNameInput"
+              />
+            </div>
+            <div>
+              <label for="quote">소개글</label>
+              <input
+                type="text"
+                placeholder="나를 소개해보아요!"
+                id="quoteInput"
+              />
+            </div>
+            <button type="submit" id="submitButton" class="modifyButton button">
+              변경하기
+            </button>
+          </form>
+        </div>
       </section>
     </main>
     <footer></footer>
