--- a/src/views/myBook/myBook.css
+++ b/src/views/myBook/myBook.css
@@ -1,9 +1,8 @@
 main {
   width: 100%;
-  height: 750px;
 }
 
-/* section */
+/* myBooksection */
 section {
   width: 810px;
   margin: auto;
@@ -12,12 +11,19 @@ section {
 .imageContainer {
   width: 120px;
   height: 120px;
-  background-image: url("./images/profile.jpg");
+  /* background-image: url("./images/profile.jpg");
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
   margin: 50px 10px;
   border-radius: 20px;
   overflow: hidden;
+  box-shadow: 4px 4px 55px rgba(162, 132, 107, 0.25);
+}
+.imageContainer > i {
+  font-size: 80px;
+  position: relative;
+  top: 40px;
+  left: 28px;
 }
 
 /* textContainer */
@@ -49,6 +55,7 @@ article {
   border-radius: 10px;
 }
 article > ul {
+  width: 100%;
   display: flex;
 }
 article > ul > li {
@@ -59,7 +66,6 @@ article > ul > li {
   margin-right: 2px;
   font-size: 14px;
   text-align: center;
-  z-index: -1;
   background-color: #a55746;
   color: #fdd8a3;
   writing-mode: vertical-lr;
@@ -69,8 +75,65 @@ article > ul > li {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+article > ul > li:first-of-type {
+  border-radius: 5px 0 0 5px;
+}
+article > ul > li:last-of-type {
+  border-radius: 0 5px 5px 0;
+}
 #myInfo {
   white-space: normal;
   overflow: visible;
   text-overflow: unset;
+}
+
+/* myInfo section */
+#myInfosection {
+  display: none;
+  width: 100%;
+  height: 110%;
+  position: absolute;
+  top: 100px;
+  background-color: rgba(238, 238, 238, 0.863);
+}
+.myInfoContainer {
+  width: 450px;
+  background-color: #fff;
+  border-radius: 24px;
+  margin: 150px auto;
+}
+
+.myInfoContainer h2 {
+  color: #5b6d5b;
+  font-size: 24px;
+  text-align: center;
+  padding: 30px 0;
+}
+form {
+  width: 200px;
+  margin: auto;
+}
+form > div {
+  margin: 20px 0;
+}
+label {
+  display: block;
+  color: #5b6d5b;
+  margin: 10px 0 10px -8px;
+}
+input {
+  width: 100%;
+  height: 36px;
+  outline: none;
+  border: none;
+  padding: 10px;
+  border-radius: 12px;
+  background-color: #f3d5c0a8;
+}
+.modifyButton {
+  position: relative;
+  left: 50px;
+  background-color: #5b6d5b;
+  color: #fff;
+  margin: 20px 0 30px 0;
 }
