feat: uniRecord로 데이터를 보내기 위한 코드 수정 uniRecord페이지로 데이터를 보내기 위해 로컬스토리지에 새로운 키를 추가하는 코드를 추가하고 오류를 수정하였습니다.
Resolves: #7

--- a/src/views/myBook/myBook.css
+++ b/src/views/myBook/myBook.css
@@ -67,6 +67,7 @@ article > ul > li {
   color: #fdd8a3;
   writing-mode: vertical-lr;
   box-shadow: 2px 1px 6px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
   /* 말줄임표 */
   white-space: nowrap;
   overflow: hidden;
