--- a/src/views/myRecord/myRecord.css
+++ b/src/views/myRecord/myRecord.css
@@ -1,68 +1,76 @@
 .recordLists {
-    width: 1300px;
-    margin: 0 auto 500px;
+  width: 1300px;
+  margin: 0 auto 500px;
 }
 
-.recordLists li{
-    display: flex;
-    justify-content: space-between;
-    padding: 18px 38px;
-    border-radius: 15px;
-    background-color: #f3d5c0;
-    cursor: pointer;
+.recordLists li {
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  padding: 18px 38px;
+  border-radius: 15px;
+  background-color: #f3d5c0;
+  cursor: pointer;
 }
 
 .recordLists li:hover {
-    background-color: #C0A490;
+  background-color: #c0a490;
 }
 
 .recordLists li:hover strong {
-    color: #fffff3;
+  color: #fffff3;
 }
 
-.recordLists li+li {
-    margin-top: 12px;
+.recordLists li + li {
+  margin-top: 12px;
 }
 
 .recordLists .recordListTitle {
-    font-weight: 600;
-    color: #314232;
+  font-weight: 600;
+  color: #314232;
+}
+
+.icons {
+  display: flex;
 }
 
 .recordLists .icons i {
-    cursor: pointer;
+  cursor: pointer;
+}
+.recordLists .icons div {
+  width: 20px;
 }
 
-.recordLists .icons i+i {
-    margin-left: 13px;
+.recordLists .icons div + div {
+  margin-left: 17px;
 }
 
 /* modal */
 
 .emptyLists {
-    display: none;
+  display: none;
 }
 
 .emptyListModal {
-    width: 1300px;
-    height: 468px;
-    margin: 0 auto;
-    padding: 119px 0 134px 0;
-    text-align: center;
-    border-radius: 24px;
-    box-shadow: 4px 4px 55px rgba(162, 132, 107, 0.25);
+  width: 1300px;
+  height: 468px;
+  margin: 0 auto;
+  padding: 119px 0 134px 0;
+  text-align: center;
+  border-radius: 24px;
+  box-shadow: 4px 4px 55px rgba(162, 132, 107, 0.25);
 }
 
 .modalTitle {
-    display: inline-block;
-    margin-bottom: 132px;
-    font-size: 44px;
-    font-weight: 800;
-    color: #5b6d5b;
+  display: inline-block;
+  margin-bottom: 132px;
+  font-size: 44px;
+  font-weight: 800;
+  color: #5b6d5b;
 }
 
 .modalDescription {
-    font-size: 24px;
-    font-weight: 500;
-    color: #5b6d5b;
+  font-size: 24px;
+  font-weight: 500;
+  color: #5b6d5b;
 }
