feat: header 사용자 닉네임 표시
로그인하면 로컬스토리지에서 myInfo 정보의 닉네임을 받아와서 로그인 버튼이 없어지고 등록한 닉네임을 표시합니다.

Resolves: #54

--- a/src/views/common/header/header.css
+++ b/src/views/common/header/header.css
@@ -87,6 +87,15 @@ nav > ul > li > a {
   border-radius: 20px;
 }
 
+.logInButtonHidden {
+  display: none;
+}
+
+.userNameList {
+  font-weight: 700;
+  pointer-events: none;
+}
+
 /* 반응형 */
 @media screen and (max-width: 1100px) {
   header > nav,
