feat: 준비중인 서비스모달 모듈화 준비중인 서비스를 알리는 모달을 모듈화 하였습니다.
Resolves: #56

--- a/src/views/landing/landing.css
+++ b/src/views/landing/landing.css
@@ -81,3 +81,15 @@
 .isHidden {
     display: none;
 }
+
+/* not Available modal */
+#notAvailableContainer {
+    display: none;
+    width: 100%;
+    height: 110%;
+    position: absolute;
+    top: 100px;
+    background-color: rgba(238, 238, 238, 0.863);
+  }
+  
+  
