--- a/src/views/myRecord/myRecord.html
+++ b/src/views/myRecord/myRecord.html
@@ -11,6 +11,8 @@
     <script src="../common/footer/footer.js" defer></script>
     <link rel="stylesheet" href="../common/footer/footer.css">
     <link rel="stylesheet" href="../common/reset.css">
+    <script src="../common/notAvailableModal/notAvailableModal.js" defer></script>
+    <link rel="stylesheet" href="../common/notAvailableModal/notAvailableModal.css">
     <script src="https://kit.fontawesome.com/8f83d1908a.js" crossorigin="anonymous"></script>
     <script src="./myRecord.js" defer></script>
     <link rel="stylesheet" href="./myRecord.css">
@@ -28,6 +30,7 @@
                 Go record; 에서 기록을 남겨보세요!
             </p>
         </div>
+        <section id="notAvailableContainer"></section>
     </main>
     <footer></footer>
 </body>
