--- a/src/views/modifyRecord/modifyRecord.css
+++ b/src/views/modifyRecord/modifyRecord.css
@@ -56,3 +56,14 @@ textarea {
   color: #fff;
   background-color: #5b6d5b;
 }
+
+/* not Available modal */
+#notAvailableContainer {
+  display: none;
+  width: 100%;
+  height: 110%;
+  position: absolute;
+  top: 100px;
+  background-color: rgba(238, 238, 238, 0.863);
+}
+
