--- a/src/views/modifyRecord/modifyRecord.html
+++ b/src/views/modifyRecord/modifyRecord.html
@@ -12,6 +12,8 @@
       src="https://kit.fontawesome.com/d0a847a6bb.js"
       crossorigin="anonymous"
     ></script>
+    <script src="../common/notAvailableModal/notAvailableModal.js" defer></script>
+    <link rel="stylesheet" href="../common/notAvailableModal/notAvailableModal.css">
     <script defer src="../common/header/header.js"></script>
     <script defer src="../common/tabButton/tabButton.js"></script>
     <script defer src="../common/footer/footer.js"></script>
@@ -39,6 +41,7 @@
         <textarea class="modifyContent"></textarea>
       </section>
       <button id="modifyButton" class="modifyButton button">Edit</button>
+      <section id="notAvailableContainer"></section>
     </main>
     <footer></footer>
   </body>
