--- a/src/views/myBook/myBook.css
+++ b/src/views/myBook/myBook.css
@@ -135,3 +135,14 @@ input {
   color: #fff;
   margin: 20px 0 30px 0;
 }
+
+/* not Available modal */
+#notAvailableContainer {
+  display: none;
+  width: 100%;
+  height: 110%;
+  position: absolute;
+  top: 100px;
+  background-color: rgba(238, 238, 238, 0.863);
+}
+
