--- a/src/views/myBook/myBook.html
+++ b/src/views/myBook/myBook.html
@@ -12,6 +12,8 @@
       src="https://kit.fontawesome.com/d0a847a6bb.js"
       crossorigin="anonymous"
     ></script>
+    <script src="../common/notAvailableModal/notAvailableModal.js" defer></script>
+    <link rel="stylesheet" href="../common/notAvailableModal/notAvailableModal.css">
     <script defer src="../common/header/header.js"></script>
     <script defer src="../common/footer/footer.js"></script>
     <script defer src="./myBook.js"></script>
@@ -68,6 +70,7 @@
           </form>
         </div>
       </section>
+      <section id="notAvailableContainer"></section>
     </main>
     <footer></footer>
   </body>
