--- a/src/views/myRecord/myRecord.css
+++ b/src/views/myRecord/myRecord.css
@@ -73,3 +73,14 @@
   font-weight: 500;
   color: #5b6d5b;
 }
+
+/* not Available modal */
+#notAvailableContainer {
+  display: none;
+  width: 100%;
+  height: 110%;
+  position: absolute;
+  top: 100px;
+  background-color: rgba(238, 238, 238, 0.863);
+}
+
