--- a/src/views/record/record.css
+++ b/src/views/record/record.css
@@ -54,3 +54,14 @@ input {
   top: 80px;
   left: 400px;
 }
+
+/* not Available modal */
+#notAvailableContainer {
+  display: none;
+  width: 100%;
+  height: 110%;
+  position: absolute;
+  top: 100px;
+  background-color: rgba(238, 238, 238, 0.863);
+}
+
