--- a/src/views/record/record.html
+++ b/src/views/record/record.html
@@ -15,6 +15,14 @@
       src="https://kit.fontawesome.com/d0a847a6bb.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="../common/notAvailableModal/notAvailableModal.js"
+      defer
+    ></script>
+    <link
+      rel="stylesheet"
+      href="../common/notAvailableModal/notAvailableModal.css"
+    />
     <script defer src="../common/header/header.js"></script>
     <script defer src="../common/footer/footer.js"></script>
     <script defer src="../common/tabButton/tabButton.js"></script>
@@ -44,6 +52,7 @@
           </button></a
         >
       </section>
+      <article id="notAvailableContainer"></article>
     </main>
     <footer></footer>
   </body>
