--- a/src/views/signIn/signIn.css
+++ b/src/views/signIn/signIn.css
@@ -46,3 +46,14 @@ input {
   color: #f3d5c0a8;
   margin: 40px 0 30px 290px;
 }
+
+/* not Available modal */
+#notAvailableContainer {
+  display: none;
+  width: 100%;
+  height: 110%;
+  position: absolute;
+  top: 100px;
+  background-color: rgba(238, 238, 238, 0.863);
+}
+
