--- a/src/views/uniRecord/unitRecord.css
+++ b/src/views/uniRecord/unitRecord.css
@@ -50,3 +50,14 @@ section {
   color: #fff;
   background-color: #5b6d5b;
 }
+
+/* not Available modal */
+#notAvailableContainer {
+  display: none;
+  width: 100%;
+  height: 110%;
+  position: absolute;
+  top: 100px;
+  background-color: rgba(238, 238, 238, 0.863);
+}
+
