--- a/src/views/uniRecord/unitRecord.html
+++ b/src/views/uniRecord/unitRecord.html
@@ -12,6 +12,8 @@
       src="https://kit.fontawesome.com/d0a847a6bb.js"
       crossorigin="anonymous"
     ></script>
+    <script src="../common/notAvailableModal/notAvailableModal.js" defer></script>
+    <link rel="stylesheet" href="../common/notAvailableModal/notAvailableModal.css">
     <script defer src="../common/header/header.js"></script>
     <script defer src="../common/tabButton/tabButton.js"></script>
     <script defer src="../common/footer/footer.js"></script>
@@ -42,6 +44,7 @@
         <button id="editButton" class="recordButton button">Edit</button>
         <button id="deleteButton" class="recordButton button">Delete</button>
       </div>
+      <section id="notAvailableContainer"></section>
     </main>
     <footer></footer>
   </body>
