feat: 모바일 사이즈 반응형 웹 대응
반응형 웹 대응이 필요한 페이지의 코드를 수정하였습니다.

Resolves: #66

--- a/src/views/common/header/header.css
+++ b/src/views/common/header/header.css
@@ -109,6 +109,10 @@ nav > ul > li > a {
     color: transparent;
   }
 
+  #menuLogo {
+    left: calc(50vw - 156px);
+  }
+
   #menuHamburger i {
     visibility: visible;
   }
