--- a/src/views/record/record.css
+++ b/src/views/record/record.css
@@ -4,9 +4,9 @@ main {
 }
 /* section */
 section {
-  width: 900px;
+  width: 60vw;
   position: absolute;
-  left: calc(50% - 450px);
+  left: 20vw;
   background-color: #ffffff;
   box-shadow: 4px 4px 55px rgba(162, 132, 107, 0.25);
   border-radius: 24px;
@@ -16,7 +16,7 @@ section {
   width: 100%;
   display: grid;
   grid-template-columns: 5fr 3fr;
-  padding: 15px 0 20px 15px;
+  padding: 15px 20px;
   border-bottom: 1px solid #ccc;
 }
 .label {
@@ -38,11 +38,12 @@ input {
   margin-left: 8px;
 }
 #contents {
-  width: 900px;
+  width: 100%;
   height: 400px;
   padding: 15px;
   border: none;
   resize: none;
+  border-radius: 24px;
 }
 
 /* button */
@@ -50,9 +51,9 @@ input {
   font-weight: 500;
   color: #fff;
   background-color: #314232;
-  position: relative;
-  top: 80px;
-  left: 400px;
+  position: absolute;
+  top: 530px;
+  left: calc(50% - 50px);
 }
 
 /* not Available modal */
@@ -65,3 +66,22 @@ input {
   background-color: rgba(238, 238, 238, 0.863);
 }
 
+@media screen and (max-width: 1100px) {
+  .inputContainer {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .inputContainer #author {
+    width: 98%;
+    margin-top: 5px;
+    margin-left: 5px;
+    padding-bottom: 31px;
+  }
+
+  .recordButton {
+    top: 624px;
+    left: calc(50% - 74px);
+  }
+
+}
