feat: 로그인할 때 닉네임이 3글자 초과되면 UI무너지는 이슈
Resolves: #67

--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -55,6 +55,7 @@
             type="text"
             placeholder="닉네임을 입력해 주세요"
             id="nameInput"
+            maxlength="7"
           />
         </div>
         <div>
